# single-turn-conversation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
3rd/jsoncpp/json/: json.h
3rd/n3ldg/cuda/: Memory_cuda.h  N3LDG_cuda.cu  N3LDG_cuda.h
3rd/n3ldg/include/: Alphabet.h  AtomicOP.h  Attention.h  AttentionHelp.h  BaseParam.h  BiOP.h  BucketOP.h  Concat.h  Graph.h  LSTM1.h  LookupTable.h  MaxProbabilityLoss.h  ModelUpdate.h  MyTensor.h  Node.h  PAddOP.h  PMultiOP.h  Param.h  Pooling.h  SoftMaxLoss.h  SparseOP.h  SparseParam.h  UniOP.h  Windowlized.h  profiler.h  serializable.h
data/: black-list.txt  config.ini  labeled.pair.txt  original-small.pair.txt
model201811301338/: main
src/: main.cc
src/basic/: conversation_structure.h  data_manager.h
src/encoder-decoder/: graph_builder.h  hyper_params.h  model_params.h
src/single_turn_conversation/: bleu.h  conversation_structure.h  data_manager.h  def.h  default_config.h  main.cc  perplex.h
src/single_turn_conversation/encoder_decoder/: decoder_components.h  decoder_components_builder.h  graph_builder.h  hyper_params.h  model_params.h
src/single_turn_conversation/encoder_decoder/attention_context/: attention_context_decoder.h
src/single_turn_conversation/encoder_decoder/global_context/: global_context_decoder_components.h
